# diag-trace-xpack

./: CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  meson_options.txt  package-lock.json  package.json  xpack.json
.github/workflows/: CI.yml  ci.yml  test-all.yml
include/micro-os-plus/diag/: trace.h
meta/: CMakeLists.txt  micro-os-plus-diag-trace-config-version.cmake  micro-os-plus-diag-trace-config.cmake  xpack-helper.cmake
sources/: CMakeLists.txt
src/: trace.cpp
tests/: CMakeLists.txt  README.md  meson.build
tests/cmake/: globals.cmake
tests/meson/globals/: meson.build
tests/meta/: CMakeLists.txt
tests/platform-native/: CMakeLists.txt  meson.build
tests/platform-native/cmake/: dependencies.cmake  globals.cmake
tests/platform-native/include-config/micro-os-plus/: config.h
tests/platform-native/meson/globals/: meson.build
tests/platform-native/meta/: config.cmake  globals.cmake
tests/platform-qemu-mps2-an386/: CMakeLists.txt  README.md  meson.build
tests/platform-qemu-mps2-an386/cmake/: dependencies.cmake  globals.cmake
tests/platform-qemu-mps2-an386/dependencies/devices-cortexm/: .gitignore  CHANGELOG.md  CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
tests/platform-qemu-mps2-an386/dependencies/devices-cortexm/include/micro-os-plus/architecture-cortexm/startup/: hooks.h
tests/platform-qemu-mps2-an386/dependencies/devices-cortexm/src/: exception-handlers.cpp
tests/platform-qemu-mps2-an386/dependencies/devices-cortexm/src/diag/: trace-itm.cpp  trace-segger-rtt.cpp
tests/platform-qemu-mps2-an386/dependencies/devices-cortexm/src/startup/: initialize-hardware-early.c  initialize-hardware.c  initialize-interrupts-stack.cpp  terminate.cpp
tests/platform-qemu-mps2-an386/dependencies/devices-qemu-cortexm/: CHANGELOG.md  CMakeLists.txt  LICENSE  README-MAINTAINER.md  README.md  meson.build  package.json
tests/platform-qemu-mps2-an386/dependencies/devices-qemu-cortexm/include/micro-os-plus/: device.h
tests/platform-qemu-mps2-an386/dependencies/devices-qemu-cortexm/linker-scripts/: mem.ld
tests/platform-qemu-mps2-an386/dependencies/devices-qemu-cortexm/src/: system_cortexm.c  vectors_cortexm.c
tests/platform-qemu-mps2-an386/dependencies/libs-c/: CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
tests/platform-qemu-mps2-an386/dependencies/libs-c/src/: c-syscalls-empty.cpp
tests/platform-qemu-mps2-an386/dependencies/libs-c/src/stdlib/: assert.c  atexit.cpp  exit.c
tests/platform-qemu-mps2-an386/dependencies/libs-cpp/: CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
tests/platform-qemu-mps2-an386/dependencies/libs-cpp/src/: cxx.cpp  system-error.cpp
tests/platform-qemu-mps2-an386/dependencies/semihosting/: CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
tests/platform-qemu-mps2-an386/dependencies/semihosting/include/micro-os-plus/: semihosting.h
tests/platform-qemu-mps2-an386/dependencies/semihosting/src/: syscalls-semihosting.cpp  trace-semihosting.cpp
tests/platform-qemu-mps2-an386/dependencies/startup/: CMakeLists.txt  README-MAINTAINER.md  README.md  meson.build  package.json
tests/platform-qemu-mps2-an386/dependencies/startup/src/: startup.cpp
tests/platform-qemu-mps2-an386/include-config/micro-os-plus/: config.h
tests/platform-qemu-mps2-an386/meson/globals/: meson.build
tests/platform-qemu-mps2-an386/src/: initialize-hardware.cpp  interrupts-handlers.cpp
tests/scripts/: helper.sh  test-all.sh  trigger-workflow-test-all.sh
tests/src/: default-test.cpp  no-trace-test.cpp  null-test.cpp  sample-test.cpp  unit-test.cpp
